--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.62.2",
     "react-native-calendar-strip": "^1.4.1",
     "react-native-calendars": "^1.261.0",
+    "react-native-chip-input": "^1.0.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-zoom-viewer": "^2.2.27",
